--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 title: 🔬🧠📄
-description: Marine Thieux CV 
+description: 
+My research mainly focuses on physiological and pathological sleep, epilepsy and attention in children, using electroencephalography. 
+I am also very interested in statistics, methodology, open science, and how to improve our research practices. 
+#Neuropsychology #CognitiveNeuroscience 
+#Sleep Medicine 
